Finally smth works +UI